Bug 1019057 - Add pointer check to ContentClientDoubleBuffered::FinalizeFrame() r=nical